examples/datalog/09_recursion/52_recursion_with_aggregation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_rec_agg
Knowledge graph 'test_rec_agg' created.
Switched to knowledge graph: test_rec_agg
> .kg use test_rec_agg
Switched to knowledge graph: test_rec_agg
> +edge[("a", "b"), ("b", "c"), ("c", "d")].
Inserted 3 fact(s) into 'edge'.
> +reachable(X, Y) :- edge(X, Y).
Rule 'reachable' registered.
> +reachable(X, Z) :- reachable(X, Y), edge(Y, Z).
Rule 'reachable' registered.
> reach_count(X, <COUNT:Y>) :- reachable(X, Y).
Script error: Parse error: Unknown aggregate function: 
